# pulse-console

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: pulseconsole.qrc
resources/scripts/: default.yaml  second_screen.yaml
src/: main.cpp
src/engine/: Engine.cpp  Engine.h  ScriptLoader.cpp  ScriptLoader.h  Steps.h
src/ui/: ConsoleWidget.cpp  ConsoleWidget.h
